Comentarios de prueba

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ input[type="color"]:hover {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
+/*Comentario prueba*/
+
 /* Labels */
 .form-label {
     font-weight: bold;
